@@ -1,3 +1,8 @@
+2008-10-23  John Swensen  <jpswensen@comcast.net>
+
+	* oct-shlib.cc (octave_dyld_shlib::open): Call NSLinkEditError to
+	get better diagnostic if NSLinkModule fails.
+
 2008-10-23  John W. Eaton  <jwe@octave.org>
 
 	* oct-shlib.cc (octave_dlopen_shlib::open): Use RTLD_NOW instead
